# P0001-samples-mcp

./: .gitignore  01-hello.py  02-math-tools.py  03-dynamic-resource.py  04-prompt-review.py  05-external-api.py  06-stateful-resource.py  07-async-tool.py  08-error-handling.py  09-multi-tool.py  10-advanced-prompts.py  11-tool-composition.py  12-file-operations.py  13-database-integration.py  14-api-integration.py  15-complex-models.py  16-mcp-client-usage.py  17-security-authentication.py  18-machine-learning-integration.py  19-llm-sampling-integration.py  20-complete-app-integration.py  21-a2a-basic-integration.py  22-secure-agent-communication.py  23-multi-agent-orchestration.py  24-websocket-tool.py  25-opentelemetry-tool.py  26-oauth2-client-tool.py  27-llm-multimodal-tool.py  28-sse-progress-tool.py  29-redis-pubsub-tool.py  30-file-upload-download-tool.py  31-fastapi-tool.py  32-github-actions-tool.py  33-pandas-dataframe-tool.py  34-docker-control-tool.py  35-slack-discord-bot-tool.py  36-pdf-extraction-tool.py  37-scheduler-tool.py  38-env-var-tool.py  39-raw-protocol-inspector.py  (+56 more)
.cursor/rules/: logs-centralization.mdc  mcp-hello-world.mdc
docs/: 001-creating-mcp-server.md
mcp-platform-demo/: README.md  VSCodeMCPExtension.md  VSCodeMCPScreenshot.md  docker-compose.yml  start-demo.sh
mcp-platform-demo/demo-orchestrator/: Dockerfile  orchestrator.py  requirements.txt
mcp-platform-demo/mcp-gateway/: Dockerfile  config.yaml  gateway.py  requirements.txt
mcp-platform-demo/mcp-servers/: api_governor.py  chaos_engineer.py  code_companion.py
(+2 files in other folders)
